sys/prebuilt-bindings/geos_3.11.rs

extern "C" {
    #[doc = " Set X ordinate values in a coordinate sequence."]
    #[doc = " \\param s the coordinate sequence"]
    #[doc = " \\param idx the index of the coordinate to alter, zero based"]
    #[doc = " \\param val the value to set the ordinate to"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSCoordSeq_setX(s: *mut GEOSCoordSequence, idx: libc::c_uint, val: f64)
        -> libc::c_int;
}
extern "C" {
    #[doc = " Set Y ordinate values in a coordinate sequence."]
    #[doc = " \\param s the coordinate sequence"]
    #[doc = " \\param idx the index of the coordinate to alter, zero based"]
    #[doc = " \\param val the value to set the ordinate to"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSCoordSeq_setY(s: *mut GEOSCoordSequence, idx: libc::c_uint, val: f64)
        -> libc::c_int;
}
extern "C" {
    #[doc = " Set Z ordinate values in a coordinate sequence."]
    #[doc = " \\param s the coordinate sequence"]
    #[doc = " \\param idx the index of the coordinate to alter, zero based"]
    #[doc = " \\param val the value to set the ordinate to"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSCoordSeq_setZ(s: *mut GEOSCoordSequence, idx: libc::c_uint, val: f64)
        -> libc::c_int;
}
extern "C" {
    #[doc = " Set X and Y ordinate values in a coordinate sequence simultaneously."]
    #[doc = " \\param s the coordinate sequence"]
    #[doc = " \\param idx the index of the coordinate to alter, zero based"]
    #[doc = " \\param x the value to set the X ordinate to"]
    #[doc = " \\param y the value to set the Y ordinate to"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSCoordSeq_setXY(
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        x: f64,
        y: f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " Set X, Y and Z ordinate values in a coordinate sequence simultaneously."]
    #[doc = " \\param s the coordinate sequence"]
    #[doc = " \\param idx the index of the coordinate to alter, zero based"]
    #[doc = " \\param x the value to set the X ordinate to"]
    #[doc = " \\param y the value to set the Y ordinate to"]
    #[doc = " \\param z the value to set the Z ordinate to"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSCoordSeq_setXYZ(
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        x: f64,
        y: f64,
        z: f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " Set Nth ordinate value in a coordinate sequence."]
    #[doc = " \\param s the coordinate sequence"]
    #[doc = " \\param idx the index of the coordinate to alter, zero based"]
    #[doc = " \\param dim the dimension number of the ordinate to alter, zero based"]
    #[doc = " \\param val the value to set the ordinate to"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSCoordSeq_setOrdinate(
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        dim: libc::c_uint,
        val: f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " Read X ordinate values from a coordinate sequence."]
    #[doc = " \\param s the coordinate sequence"]
    #[doc = " \\param idx the index of the coordinate to alter, zero based"]
    #[doc = " \\param val pointer where ordinate value will be placed"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSCoordSeq_getX(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        val: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " Read Y ordinate values from a coordinate sequence."]
    #[doc = " \\param s the coordinate sequence"]
    #[doc = " \\param idx the index of the coordinate to alter, zero based"]
    #[doc = " \\param val pointer where ordinate value will be placed"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSCoordSeq_getY(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        val: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " Read Z ordinate values from a coordinate sequence."]
    #[doc = " \\param s the coordinate sequence"]
    #[doc = " \\param idx the index of the coordinate to alter, zero based"]
    #[doc = " \\param val pointer where ordinate value will be placed"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSCoordSeq_getZ(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        val: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " Read X and Y ordinate values from a coordinate sequence."]
    #[doc = " \\param s the coordinate sequence"]
    #[doc = " \\param idx the index of the coordinate to alter, zero based"]
    #[doc = " \\param x pointer where ordinate X value will be placed"]
    #[doc = " \\param y pointer where ordinate Y value will be placed"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSCoordSeq_getXY(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        x: *mut f64,
        y: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " Read X and Y ordinate values from a coordinate sequence."]
    #[doc = " \\param s the coordinate sequence"]
    #[doc = " \\param idx the index of the coordinate to alter, zero based"]
    #[doc = " \\param x pointer where ordinate X value will be placed"]
    #[doc = " \\param y pointer where ordinate Y value will be placed"]
    #[doc = " \\param z pointer where ordinate Z value will be placed"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSCoordSeq_getXYZ(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        x: *mut f64,
        y: *mut f64,
        z: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " Read Nth ordinate value from a coordinate sequence."]
    #[doc = " \\param[in] s the coordinate sequence"]
    #[doc = " \\param[in] idx the index of the coordinate to alter, zero based"]
    #[doc = " \\param[in] dim the dimension number of the ordinate to read, zero based"]
    #[doc = " \\param[out] val pointer where ordinate value will be placed"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSCoordSeq_getOrdinate(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        dim: libc::c_uint,
        val: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " Get size info from a coordinate sequence."]
    #[doc = " \\param[in] s the coordinate sequence"]
    #[doc = " \\param[out] size pointer where size value will be placed"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSCoordSeq_getSize(
        s: *const GEOSCoordSequence,
        size: *mut libc::c_uint,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " Get dimension info from a coordinate sequence."]
    #[doc = " \\param[in] s the coordinate sequence"]
    #[doc = " \\param[out] dims pointer where dimension value will be placed"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSCoordSeq_getDimensions(
        s: *const GEOSCoordSequence,
        dims: *mut libc::c_uint,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " Check orientation of a coordinate sequence. Closure of the sequence is"]
    #[doc = " assumed. Invalid (collapsed) sequences will return false. Short (less"]
    #[doc = " than 4 points) sequences will return exception."]
    #[doc = " \\param s the coordinate sequence"]
    #[doc = " \\param is_ccw pointer for ccw value, 1 if counter-clockwise orientation, 0 otherwise"]
    #[doc = " \\return 0 on exception, 1 on success"]
    pub fn GEOSCoordSeq_isCCW(
        s: *const GEOSCoordSequence,
        is_ccw: *mut libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " Creates a point geometry from a coordinate sequence."]
    #[doc = " \\param s Input coordinate sequence, ownership passes to the geometry"]
    #[doc = " \\return A newly allocated point geometry. NULL on exception."]
    #[doc = " Caller is responsible for freeing with GEOSGeom_destroy()."]
    pub fn GEOSGeom_createPoint(s: *mut GEOSCoordSequence) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " Creates a point geometry from a pair of coordinates."]
    #[doc = " \\param x The X coordinate"]
    #[doc = " \\param y The Y coordinate"]
    #[doc = " \\return A newly allocated point geometry. NULL on exception."]
    #[doc = " Caller is responsible for freeing with GEOSGeom_destroy()."]
    pub fn GEOSGeom_createPointFromXY(x: f64, y: f64) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " Creates an empty point."]
    #[doc = " \\return A newly allocated empty point geometry. NULL on exception."]
    #[doc = " Caller is responsible for freeing with GEOSGeom_destroy()."]
    pub fn GEOSGeom_createEmptyPoint() -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " Creates a linear ring geometry, for use in a polygon."]
    #[doc = " \\param s Input coordinate sequence, ownership passes to the geometry"]
    #[doc = " \\return A newly allocated linear ring geometry. NULL on exception."]
    #[doc = " Caller is responsible for freeing with GEOSGeom_destroy()."]
    pub fn GEOSGeom_createLinearRing(s: *mut GEOSCoordSequence) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " Creates a linestring geometry."]
    #[doc = " \\param s Input coordinate sequence, ownership passes to the geometry"]
    #[doc = " \\return A newly allocated linestring geometry. NULL on exception."]
    #[doc = " Caller is responsible for freeing with GEOSGeom_destroy()."]
    pub fn GEOSGeom_createLineString(s: *mut GEOSCoordSequence) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " Creates an emptylinestring geometry."]
    #[doc = " \\return A newly allocated linestring geometry. NULL on exception."]
    #[doc = " Caller is responsible for freeing with GEOSGeom_destroy()."]
    pub fn GEOSGeom_createEmptyLineString() -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " Creates an empty polygon geometry."]
    #[doc = " \\return A newly allocated empty polygon geometry. NULL on exception."]
    #[doc = " Caller is responsible for freeing with GEOSGeom_destroy()."]
    pub fn GEOSGeom_createEmptyPolygon() -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " Creates a polygon geometry from line ring geometries."]
    #[doc = " \\param shell A linear ring that is the exterior ring of the polygon."]
    #[doc = " \\param holes An array of linear rings that are the holes."]
    #[doc = " \\param nholes The number of rings in the holes array."]
    #[doc = " \\return A newly allocated geometry. NULL on exception."]
    #[doc = " Caller is responsible for freeing with GEOSGeom_destroy()."]
    #[doc = " \\note The holes argument is an array of GEOSGeometry* objects."]
    #[doc = "       The caller **retains ownership** of the containing array,"]
    #[doc = "       but the ownership of the pointed-to objects is transferred"]
    #[doc = "       to the returned \\ref GEOSGeometry."]
    pub fn GEOSGeom_createPolygon(
        shell: *mut GEOSGeometry,
        holes: *mut *mut GEOSGeometry,
        nholes: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " Create a geometry collection."]
    #[doc = " \\param type The geometry type, enumerated by \\ref GEOSGeomTypes"]
    #[doc = " \\param geoms A list of geometries that will form the collection"]
    #[doc = " \\param ngeoms The number of geometries in the geoms list"]
    #[doc = " \\return A newly allocated geometry collection. NULL on exception."]
    #[doc = " Caller is responsible for freeing with GEOSGeom_destroy()."]
    #[doc = " \\note The holes argument is an array of GEOSGeometry* objects."]
    #[doc = "       The caller **retains ownership** of the containing array,"]
    #[doc = "       but the ownership of the pointed-to objects is transferred"]
    #[doc = "       to the returned \\ref GEOSGeometry."]
    pub fn GEOSGeom_createCollection(
        type_: libc::c_int,
        geoms: *mut *mut GEOSGeometry,
        ngeoms: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
